Integração entre Consumer,Producer,RMQ e API externa foi feita

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=weather-producer
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=jvvaccari
-spring.rabbitmq.password=motta123
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
