Atualizando propriedades de producer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 weather.exchange.name=weather.exchange
 spring.rabbitmq.host=localhost
+server.port=8088
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
